# pskit

./: .dockerignore  .gitignore  Dockerfile  README.md  web-server.code-workspace  web-wasm.code-workspace
pskit/ai/: INABe.py  requirements.txt  run_pskit.py  utils.py
pskit/ai/config/: __init__.py
pskit/ai/feature/: empirical_feats.py  esm2.py  extract.py  saprot.py
pskit/ai/model/: INAB.py  egnn_clean.py
pskit/pskit-wasm-pkg/: package.json  pskit_wasm.d.ts  pskit_wasm.js  pskit_wasm_bg.js  pskit_wasm_bg.wasm  pskit_wasm_bg.wasm.d.ts
pskit/toolkit/: Cargo.toml
pskit/toolkit/crates/pskit-core/: Cargo.toml  README.md
pskit/toolkit/crates/pskit-core/src/: annotate.rs  contact.rs  lib.rs  split.rs  utils.rs
pskit/toolkit/crates/pskit-wasm/: Cargo.toml  README.md
pskit/toolkit/pkg/: pskit_wasm.d.ts  pskit_wasm_bg.wasm
webpage/: index.html  package-lock.json  package.json  vite.config.js
webpage/src/: App.vue
webpage/src/assets/: main.css
webpage/src/components/: Card.vue  InputStructure.vue  Loading.vue  TaskResult.vue
webpage/src/components/icons/: IconFailed.vue  IconSuccess.vue
webpage/src/router/: index.js
webpage/src/utils/: pdbeMolstar.js  wasmBatch.js
webpage/src/views/: ContactMap.vue  Home.vue  NotFound.vue  Viewer.vue
webpage/src/views/binding/: Annotate.vue  Predict.vue
webpage/src/views/features/: LanguageModel.vue  Structural.vue
webpage/src/views/tools/: Extract.vue  Split.vue
webpage/src/workers/: pskitWasm.worker.js
webserver/: Cargo.toml
webserver/src/: config.rs  database.rs  main.rs  models.rs  tasks.rs
(+5 files in other folders)
